# ai_economic_ews

./: README.md  pyproject.toml  requirements.txt
app/: dashboard.py  dashboard_data.json  index.html
app/pages/: 4_Fragility.py
data/marts/: affordability_timeseries.json  cost_capability.csv  cost_capability.json  data_freshness.csv  data_freshness.json  labor_index.json  macro_fragility.csv  macro_fragility.json  occupation_panel.csv  pipeline_artifacts.json
data/processed/: affordability_timeseries.csv  concentration_index.csv  concentration_index.json  labor_index.csv  occupation_panel.json  overview_indices.csv  overview_indices.json
data/raw/ai_pricing/: ai_pricing.csv  ai_pricing_metadata.json
data/raw/capability_benchmarks/: capability_benchmarks.csv  capability_benchmarks_metadata.json
data/raw/macro_labor/: macro_labor.csv  macro_labor_metadata.json
data/raw/occupation_labor/: occupation_labor.csv  occupation_labor_metadata.json
data/reference/: concentration_reference.csv  occupation_exposure.csv  source_registry.csv
src/ews/: run_pipeline.py
src/ews/config/: settings.py
src/ews/indices/: calculations.py
src/ews/ingest/: adapters.py
src/ews/process/: __init__.py  pipeline.py
src/ews/utils/: io.py  validation.py
tests/: test_indices.py  test_pipeline.py
