[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-economic-ews"
version = "0.1.0"
description = "AI Economic Early Warning System v1"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "OpenAI Codex"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
